<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/bind_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/text_bind"/>

        <EditText
            android:id="@+id/et_bind_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:textSize="16sp"
            android:padding="6dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="text"
            android:gravity="center" />
        <Button
            android:id="@+id/btn_bind_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:theme="@style/FlatButton"
            android:minWidth="88dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/btn_bind"/>
        <Button
            android:id="@+id/btn_bind_unbind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:theme="@style/FlatButton"
            android:minWidth="88dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/btn_unbind"/>
    </LinearLayout>

</LinearLayout>
