<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.udc.apm.familycare.TermsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/text_agreement" />
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_margin="0dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_top_shadow" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="end"
        android:padding="0dp"
        android:layout_margin="0dp">
        <Button
            android:id="@+id/btn_terms_disagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="88dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/btn_disagree"
            android:theme="@style/FlatButton" />
        <Button
            android:id="@+id/btn_terms_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="88dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/btn_agree"
            android:theme="@style/FlatButton" />
    </LinearLayout>

</LinearLayout>
